<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"



    tools:context="com.example.frasser.masterteach.LoginActivity">

    <RelativeLayout
        android:fitsSystemWindows="true"
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="415dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            >


            <TextView
                android:id="@+id/txt_uno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/primer_mensaje"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_marginTop="15dp"


                />

            <TextView
                android:id="@+id/txt_dos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_uno"
                android:text="@string/segundo_mensaje"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:gravity="center"


                >

                <EditText
                    android:id="@+id/edt_user"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/txt_dos"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/usu"
                    android:paddingLeft="30dp"


                    android:singleLine="true"
                    android:textColor="#696154"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layo"
                android:gravity="center">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_alignStart="@+id/edt_user"
                    android:layout_below="@+id/edt_user"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingLeft="30dp"


                    android:textColor="#696154"


                    />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/button"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_below="@+id/layo2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@drawable/redondeado"
                android:text="@string/txt_btn_"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                tools:ignore="UnknownId"
                android:onClick="iniciarSesion"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/button"
                android:layout_marginTop="50dp"
                android:text="@string/txt_olvido"
                android:textAlignment="center" />


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textView"
                android:layout_marginEnd="11dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:src="@drawable/add_icon" />


        </RelativeLayout>


    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="386dp"

        android:layout_height="230dp"


        android:layout_alignParentStart="true"
        android:foregroundGravity="top"
        android:src="@drawable/profesor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout2" />


</android.support.constraint.ConstraintLayout>

