<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/agendar"
    tools:context=".RegistroActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:fitsSystemWindows="true"
        >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/spn_modalidad"
            android:layout_marginTop="70dp"
            android:text="@string/txt_modalidad"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spn_modalidad"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dialog"
            android:layout_marginTop="5dp"></Spinner>

        <ImageButton
            android:id="@+id/btn_ubicacion"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/btn_foto"
            android:layout_below="@+id/imagen_foto_estudiante"
            android:src="@mipmap/mapados"

            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layotext"
            android:layout_marginStart="54dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/textView7"
            android:text="@string/txt_foto"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imagen_foto_estudiante"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_below="@+id/textView9"
            android:layout_marginStart="37dp"
            android:layout_toEndOf="@+id/textView7"

            />

        <ImageButton
            android:id="@+id/btn_foto"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignEnd="@+id/textView7"
            android:layout_below="@+id/textView9"
            android:layout_marginEnd="52dp"
            android:src="@mipmap/camara" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layotext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spn_modalidad"
            android:layout_marginTop="2dp"
            android:gravity="center">

            <EditText
                android:id="@+id/edt_telefono"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"

                android:hint="@string/hint_telefono"
                android:inputType="phone"
                android:paddingLeft="5dp"
                android:textColor="#696154"

                />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btn_ubicacion"
            android:layout_below="@+id/btn_ubicacion"
            android:text="txt_locacion" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btn_foto"
            android:layout_below="@+id/btn_foto"
            android:text="txt_subir_foto" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textView9"
            android:layout_marginBottom="23dp"
            android:layout_marginStart="39dp"

            android:gravity="bottom"
            android:text="@string/txt_btn_solicitar"

            />


    </RelativeLayout>

    <fragment
        android:id="@+id/mapa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"></RelativeLayout>

</LinearLayout>